<resources>
    <string name="app_name">Cashmere</string>
    <string name="home">Home</string>
    <string name="closet">Closet</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>

    <string name="backpack">Backpack</string>
    <string name="bathrobe">Bathrobe</string>
    <string name="belt">Belt</string>
    <string name="boots">Boots</string>
    <string name="bow_tie">Bow Tie</string>
    <string name="bowler_hat">Bowler Hat</string>
    <string name="boxers">Boxers</string>
    <string name="bra">Bra</string>
    <string name="cap">Cap</string>
    <string name="dress_1">Dress #1</string>
    <string name="dress_2">Dress #2</string>
    <string name="dress_3">Dress #3</string>
    <string name="dress_4">Dress #4</string>
    <string name="glasses">Glasses</string>
    <string name="hat">Hat</string>
    <string name="high_heels">High Heels</string>
    <string name="jacket_1">Jacket #1</string>
    <string name="jacket_2">Jacket #2</string>
    <string name="jacket_3">Jacket #3</string>
    <string name="jacket_4">Jacket #4</string>
    <string name="jeans">Jeans</string>
    <string name="lingerie">Lingerie</string>
    <string name="overall">Overall</string>
    <string name="polo">Polo</string>
    <string name="pullover">Pullover</string>
    <string name="purse_1">Purse #1</string>
    <string name="purse_2">Purse #2</string>
    <string name="scarf">Scarf</string>
    <string name="shirt_1">Shirt #1</string>
    <string name="shirt_2">Shirt #2</string>
    <string name="shirt_3">Shirt #3</string>
    <string name="shoes">Shoes</string>
    <string name="shorts">Shorts</string>
    <string name="skirt">Skirt</string>
    <string name="sleeveless">Sleeveless</string>
    <string name="slippers">Slippers</string>
    <string name="sneakers_1">Sneakers #1</string>
    <string name="sneakers_2">Sneakers #2</string>
    <string name="socks">Socks</string>
    <string name="suitcase">Suitcase</string>
    <string name="sweatshirt">Sweatshirt</string>
    <string name="swimsuit_1">Swimsuit #1</string>
    <string name="swimsuit_2">Swimsuit #2</string>
    <string name="tie">Tie</string>
    <string name="trench_coat">Trench Coat</string>
    <string name="trousers">Trousers</string>
    <string name="underpants">Underpants</string>
    <string name="vest">Vest</string>
    <string name="winter_hat">Winter Hat</string>

    <string name="all_weather">All-Weather</string>
    <string name="freezing">Freezing</string>
    <string name="cold">Cold</string>
    <string name="normal">Normal</string>
    <string name="warm">Warm</string>
    <string name="hot">Hot</string>

<!--    HomeFragment.kt-->
    <string name="todays_outfit">Your Outfit for Today</string>

<!--    ClothingFragment.kt-->
    <string name="add_clothing">Add Clothing</string>
    <string name="category">Category</string>
    <string name="brand">Brand</string>
    <string name="colour">Colour</string>
    <string name="size">Size</string>
    <string name="temperature_rating">Temperature rating</string>
    <string name="note">Note</string>
    <string name="choose_image">Choose image</string>
    <string name="no_category_selected">You must select a category</string>

<!--    SettingsFragment.kt-->
    <string name="view_categories_title">View categories</string>
    <string name="view_categories_desc">For clothing articles</string>
    <string name="clothing_categories">Clothing Categories</string>
    <string name="add_clothing_category">Add Clothing Category</string>
    <string name="no_name_entered">You must enter a name</string>
    <string name="no_icon_selected">You must pick an icon</string>

</resources>