<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clothing_categories"
        android:textSize="22sp"
        android:fontFamily="@font/manrope_semibold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:paddingVertical="8dp"
        android:clipToPadding="false"
        android:scrollbars="vertical"
        android:requiresFadingEdge="vertical"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/MaterialTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/category_name_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:gravity="end">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            style="@style/MaterialOutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/cancel"
            android:textColor="?attr/colorWarning"
            android:layout_marginEnd="16dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_button"
            style="@style/MaterialOutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/add"/>

    </LinearLayout>

</LinearLayout>