<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:fontFamily="@font/manrope_semibold"
            android:text="@string/add_clothing"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MaterialDropdown"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="4dp">

                <AutoCompleteTextView
                    android:id="@+id/category_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:hint="@string/category"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MaterialTextInput"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/brand_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/brand"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:layout_marginVertical="4dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MaterialTextInput"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/colour_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/colour"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MaterialTextInput"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/size_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/size"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MaterialDropdown"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="4dp">

                <AutoCompleteTextView
                    android:id="@+id/temperature_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:hint="@string/temperature_rating"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MaterialTextInput"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/note_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/note"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:layout_gravity="start|center_vertical">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:adjustViewBounds="true"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/image_picker_button"
                style="@style/MaterialTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_image"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                style="@style/MaterialNegativeTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_button"
                style="@style/MaterialOutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/add"/>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>