<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/weather_card"
        style="@style/MaterialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/weather_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Current Temperature: degreesC"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/todays_outfit"
        android:textAlignment="viewStart"
        android:fontFamily="@font/manrope_semibold"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toBottomOf="@+id/weather_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/closet_button"
            style="@style/MaterialOutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/closet"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_button"
            style="@style/MaterialOutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:text="@string/settings"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>